tests/NormalTests/paczka1/small_fuzzy/82203270.err
Error in line 2: B4wS7LwTCrX A81 16,5
Error in line 8: MtJ0BC05D A451 96,4
Error in line 15: T4sTp A411 -2,5
